# blog.ashabalin.me

./: .gitignore  Makefile  README.md  blog.cabal  cabal.config  deploy.sh  robots.txt  site.hs
css/: default.css  prism-solarized-light.css  syntax-solarized-light.css  syntax.css
drafts/: heterogenous-equality.markdown
drafts/heterogenous-equality/: Agda1.agda  Agda2.agda  Idris1.idr
javascript/: prism-agda.js  prism-idris.js  prism.js
posts/: 2014-12-26-heterogenous-equality.markdown  heterogeneous-equality.markdown
templates/: default.html  draft.html  drafts.html  post.html
